# app

./: .coderabbit.yaml  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPETITIVE-BRIEF.md  ROADMAP.md  commitlint.config.js  eslint.config.js  features-v2.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.claude/rules/: architecture.md  commands.md  conventions.md  testing.md
.github/workflows/: ci.yml  release.yml
docs/: color-system.md
docs/plans/: 2026-02-17-git-panel-design.md  2026-02-17-launch-configurations-design.md  2026-02-17-launch-configurations.md  2026-02-24-preview-integration-plan.md  2026-02-24-preview-integration.md  2026-02-25-editor-polish-design.md  (+3 more)
e2e/: app-launch.spec.ts  keyboard-shortcuts.spec.ts  settings-dialog.spec.ts  tauri-mocks.ts  ui-audit.spec.ts
logs/: .9078156ef10b1e664feb269a94687b6522dfc28d-audit.json  .adc4c45f15500beb129fc27c408c31e3819308b3-audit.json
scripts/: Kodiq Dev.command  dev-stop.sh  dev.sh
src/: App.tsx  app.css  env.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_launch_configs.sql  003_ssh_connections.sql  004_chat.sql
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/academy/: manager.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/cli/: detect.rs
src-tauri/src/db/: chat.rs  history.rs  launch_configs.rs  migrations.rs  mod.rs  projects.rs  sessions.rs  settings.rs  snippets.rs
src-tauri/src/filesystem/: mod.rs  read.rs  watcher.rs  write.rs
src-tauri/src/git/: info.rs
src-tauri/src/preview/: agent.js  devtools.rs  manager.rs  mod.rs  server.rs
src-tauri/src/ssh/: client.rs  connection.rs  db.rs  filesystem.rs  git.rs  mod.rs  port_forward.rs  terminal.rs
src-tauri/src/terminal/: manager.rs  mod.rs  parser.rs
src/lib/: constants.ts  (+4 more)
(+130 files in other folders)
