[package]
name = "kodiq"
version = "0.1.0"
description = "AI IDE for everyone"
authors = ["artemboev7-web"]
license = "MIT"
repository = "https://github.com/artemboev7-web/kodiq"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
portable-pty = "0.8"
