[package]
name = "kodiq"
version = "0.2.0"
description = "AI Terminal IDE"
authors = ["Kodiq Team"]
license = "Apache-2.0"
repository = "https://github.com/artemboev7-web/kodiq"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# pro = ["reqwest"]  # Uncomment when reqwest is added (Phase 6)

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"

# Terminal
portable-pty = "0.8"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
dirs = "6"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# Future additions (uncomment when needed):
# notify = "8"              # File watcher (Phase 2)
# thiserror = "2"           # Typed errors (Phase 2)
# reqwest = { version = "0.12", optional = true }  # Pro HTTP client

# Auto-update (desktop only)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
